--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -110,7 +110,7 @@
                 }
                 @if (isReviewer)
                 {
-                    <a class="nav-link @Active("Reviews","Queue")" asp-controller="Reviews" asp-action="Queue">
+                    <a class="nav-link @Active("Reviewer","Index")" asp-controller="Reviewer" asp-action="Index">
                         <i class="bi bi-inboxes"></i>
                         <span>Review queue</span>
                     </a>
